Start migration to Nuxt

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,29 @@
 _site/
 .sass-cache/
 .jekyll-metadata
+
+
+# Nuxt dev/build outputs
+.output
+.data
+.nuxt
+.nitro
+.cache
+dist
+
+# Node dependencies
+node_modules
+
+# Logs
+logs
+*.log
+
+# Misc
+.DS_Store
+.fleet
+.idea
+
+# Local env files
+.env
+.env.*
+!.env.example
